--- a/logi-ops.cfg
+++ b/logi-ops.cfg
@@ -1,144 +1,18 @@
 devices: (
+{
+    name: "MX Anywhere 3";
+    smartshift:
     {
-        name: "Wireless Mouse MX Master 3";
-        smartshift:
-        {
-            on: true;
-            threshold: 20;
-            torque: 20;
-        };
-        hiresscroll:
-        {
-            hires: true;
-            invert: false;
-            target: false;
-        };
-        dpi: 4000;
-
-        buttons: (
-            {
-                cid: 0xc3;
-                action =
-        name: "Wireless Mouse MX Master 3";
-        smartshift:
-        {
-            on: true;
-            threshold: 30;
-            torque: 50;
-        };
-        hiresscroll:
-        {
-            hires: true;
-            invert: false;
-            target: false;
-        };
-        dpi: 4000;
-
-        buttons: (
-            {
-                cid: 0xc3;
-                action =
-                {
-                    type: "Gestures";
-                    gestures: (
-                        {
-                            direction: "Up";
-                            mode: "OnRelease";
-                            action =
-                            {
-                                type: "Keypress";
-                                keys: ["KEY_UP"];
-                            };
-                        },
-                        {
-                            direction: "Down";
-                            mode: "OnRelease";
-                            action =
-                            {
-                                type: "Keypress";
-                                keys: ["KEY_DOWN"];
-                            };
-                        },
-                        {
-                            direction: "Left";
-                            mode: "OnRelease";
-                            action =
-                            {
-                                type: "CycleDPI";
-                                dpis: [400, 600, 800, 1000, 1200, 1400, 1600];
-                            };
-                        },
-                        {
-                            direction: "Right";
-                            mode: "OnRelease";
-                            action =
-                            {
-                                type = "ToggleSmartshift";
-                            }
-                        },
-                        {
-                            direction: "None"
-                            mode: "NoPress"
-                        }
-                    );
-                };
-            },
-            {
-                cid: 0xc4;
-                action =
-                {
-                    type: "Keypress";
-                    keys: ["KEY_A"];
-                };
-            }
-        );
-    }
-    );
-                                type: "Keypress";
-                                keys: ["KEY_UP"];
-                            };
-                        },
-                        {
-                            direction: "Down";
-                            mode: "OnRelease";
-                            action =
-                            {
-                                type: "Keypress";
-                                keys: ["KEY_DOWN"];
-                            };
-                        },
-                        {
-                            direction: "Left";
-                            mode: "OnRelease";
-                            action =
-                            {
-                                type: "CycleDPI";
-                                dpis: [400, 600, 800, 1000, 1200, 1400, 1600];
-                            };
-                        },
-                        {
-                            direction: "Right";
-                            mode: "OnRelease";
-                            action =
-                            {
-                                type = "ToggleSmartshift";
-                            }
-                        },
-                        {
-                            direction: "None"
-                            mode: "NoPress"
-                        }
-                    );
-                };
-            },
-            {
-                cid: 0xc4;
-                action =
-                {
-                    type: "Keypress";
-                    keys: ["KEY_A"];
-                };
-            }
-        );
-    }
+        on: true;
+        threshold: 30;
+        torque: 50;
+    };
+    hiresscroll:
+    {
+        hires: false;
+        invert: false;
+        target: false;
+    };
+    dpi: 2500;
+}
 );
